# cpprint

./: CMakeLists.txt  print.h
include/mdorner/: print.h  sprint.h
test/: CMakeLists.txt  print_test.cpp  sprint_test.cpp
